--- a/src/app_config.json
+++ b/src/app_config.json
@@ -28,7 +28,8 @@
                         "replace": "$INSTANCENAME$",
                         "filename": ""
                      }
-                  ]
+                  ],
+                  "selectParams": []
                }
             },
             {
@@ -96,7 +97,8 @@
                         "replace": "$CONCRETE_BUILDER_CLASSNAME1$",
                         "filename": "ConcreteBuilder.java"
                      }
-                  ]
+                  ],
+                  "selectParams": []
                }
             },
             {
@@ -121,7 +123,8 @@
                   }
                ],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
                
             },
@@ -163,7 +166,8 @@
                   }
                ],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -184,7 +188,8 @@
                   }
                ],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             }
          ]
@@ -197,7 +202,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -205,7 +211,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -213,7 +220,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -221,7 +229,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -229,7 +238,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -237,7 +247,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -245,7 +256,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             }
          ]
@@ -258,7 +270,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -266,7 +279,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -274,7 +288,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -282,7 +297,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -290,7 +306,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -298,7 +315,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -306,7 +324,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -314,7 +333,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -322,7 +342,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             },
             {
@@ -330,7 +351,8 @@
                "patternFilesDirectory": "",
                "files": [],
                "params": {
-                  "textFieldParams": []
+                  "textFieldParams": [],
+                  "selectParams": []
                }
             }
          ]
