refactor: proper loading of a pattern

--- a/public/app_config.json
+++ b/public/app_config.json
@@ -8,6 +8,11 @@
                     "patternName": "Test_Pattern",
                     "patternDir": "test_pattern",
                     "configFile": "test_config.json"
+                },
+                {
+                    "patternName": "Singleton",
+                    "patternDir": "singleton",
+                    "configFile": "singleton_config.json"
                 }
             ]
         },
