--- a/public/creational_patterns/builder/builder_config.json
+++ b/public/creational_patterns/builder/builder_config.json
@@ -30,7 +30,7 @@
             {
                 "shouldBeVisible": true,
                 "label": "Builder methods",
-                "defaultValue": "void buildPartA();\nvoid buildPartB();",
+                "defaultValue": "public void buildPartA();\npublic void buildPartB();",
                 "replace": "$BUILDER_METHODS$",
                 "filename": ""
             },
