--- a/public/creational_patterns/singleton/singleton_config.json
+++ b/public/creational_patterns/singleton/singleton_config.json
@@ -3,7 +3,8 @@
     "files": [
         {
             "defaultName": "Singleton.java",
-            "sourceFile": "Singleton.java"
+            "sourceFile": "Singleton.java",
+            "extension": "java"
         }
     ],
     "params": {
