feat: Object type as method return type support

--- a/public/app_config.json
+++ b/public/app_config.json
@@ -20,7 +20,7 @@
                     "configFile": "abstract_factory_config.json"
                 },
                 {
-                    "patternName": "Facotry Method",
+                    "patternName": "Factory Method",
                     "patternDir": "factory_method",
                     "configFile": "factory_method_config.json"
                 },
