--- a/public/method_generator_config.json
+++ b/public/method_generator_config.json
@@ -30,7 +30,8 @@
             "accessTypes": [
                 "public",
                 "private",
-                "protected"
+                "protected",
+                "virtual"
             ],
             "returnTypes": [
                 {
